# evolved-packet-core-demo

./: Makefile.am  README.md  configure.ac  main.c  nat.sh  vepc_restart.sh
debian/: changelog  control  copyright
files/docker/: Dockerfile  cmd
files/root/etc/vepcd/: spgw_static_ip.conf
kmod/: Makefile  agent_c.c  gtp.h  gtp_flow  gtp_flow.c  gtp_fw.c  gtp_fw.h  gtp_fw_nl  gtp_fw_nl.c
lib/core/include/: 3gpp_types.h  core_epc_msg.h  core_event.h  core_index.h  core_mgmt_msg.h  core_network.h  core_param.h  core_pkbuf.h  core_timer.h  core_zmq.h  key.h  md5.h  utils.h
lib/core/src/: Makefile.am  debug.c  epc_msg.c  event.c  hash.c  key.c  md5.c  mgmt_msg.c  timer.c  utils.c  zmq.c
lib/core/src/unix/: pkbuf.c  sctp.c  sockaddr.c  socket.c  udp.c
lib/core/test/: testtimer.c
lib/fd/: fd_init.c
lib/freeDiameter-1.2.1/: configure.ac
lib/freeDiameter-1.2.1/extensions/dict_dcca/: dict_dcca.c
lib/freeDiameter-1.2.1/extensions/dict_dcca_3gpp/: dict_dcca_3gpp.c
lib/freeDiameter-1.2.1/extensions/dict_s6a/: dict_s6a.c
lib/gtp/: gtp_message.c  gtp_message.h  gtp_path.c  gtp_path.h  gtp_types.c  gtp_xact.c  gtp_xact.h
lib/gtp/support/: README  gtp_tlv.py
lib/ipfw/: dummynet.c
lib/nas/: nas_decoder.c  nas_encoder.c  nas_ies.c  nas_ies.h  nas_message.h  nas_types.h
lib/nas/support/: README  nas_message.py
lib/s1ap/asn1c/: Makefile.am  S1AP_Additional-GUTI.c  S1AP_AllocationAndRetentionPriority.c  S1AP_AssistanceDataForCECapableUEs.c  S1AP_AssistanceDataForPaging.c  S1AP_AssistanceDataForRecommendedCells.c  S1AP_Bearers-SubjectToStatusTransfer-Item.c  S1AP_Bearers-SubjectToStatusTransferList.c  S1AP_CGI.c  S1AP_COUNTValueExtended.c  S1AP_COUNTvalue.c  S1AP_COUNTvaluePDCP-SNlength18.c  S1AP_CSG-IdList-Item.c  S1AP_CSGMembershipInfo.c  S1AP_CancelledCellinEAI-Item.c  S1AP_CancelledCellinTAI-Item.c  S1AP_Cdma2000OneXSRVCCInfo.c  S1AP_CellBasedMDT.c  S1AP_CellID-Broadcast-Item.c  S1AP_CellID-Cancelled-Item.c  S1AP_CellIdentifierAndCELevelForCECapableUEs.c  S1AP_CellTrafficTrace.c  S1AP_CellTrafficTrace.h  S1AP_CellType.c  S1AP_CompletedCellinEAI-Item.c  S1AP_CompletedCellinTAI-Item.c  S1AP_ConnectionEstablishmentIndication.c  S1AP_ConnectionEstablishmentIndication.h  S1AP_CriticalityDiagnostics-IE-Item.c  S1AP_CriticalityDiagnostics.c  S1AP_DL-CP-SecurityInformation.c  S1AP_DeactivateTrace.c  S1AP_DeactivateTrace.h  S1AP_DownlinkNASTransport.c  S1AP_DownlinkNASTransport.h  S1AP_DownlinkNonUEAssociatedLPPaTransport.c  S1AP_DownlinkNonUEAssociatedLPPaTransport.h  S1AP_DownlinkS1cdma2000tunnelling.c  S1AP_DownlinkS1cdma2000tunnelling.h  S1AP_DownlinkUEAssociatedLPPaTransport.c  (+323 more)
lib/s1ap/support/: README.md
lib/s1ap/support/r14.4.0/: 36413-e40.asn
rootfs/: docker_cmd
rootfs/etc/: ipsec.secrets  rc.local
rootfs/etc/keepalived/: notify.sh
rootfs/etc/network/: interfaces
src/: Makefile.am  app_init.h  epc.c  ext.c  spgw.c  upf.c
src/common/: application.c  context.c  context.h
src/ext/: Makefile.am  ext_context.c  ext_context.h  ext_data_syn.c  ext_data_syn.h  ext_init.c  ext_msg_handler.c  ext_msg_handler.h
src/hss/: hss_init.c
src/mme/: Makefile.am  emm_build.c  emm_handler.c  emm_sm.c  esm_build.c  esm_sm.c  kasumi.c  mme_context.c  mme_context.h  mme_event.c  mme_event.h  mme_gtp_path.c  mme_init.c  mme_mgmt.c  mme_mgmt.h  mme_s11_handler.c  mme_sm.c  nas_path.c  s1ap_build.c  s1ap_build.h  s1ap_handler.c  s1ap_handler.h  s1ap_path.c  s1ap_path.h  s1ap_sctp.c  s1ap_sm.c
src/pcrf/: pcrf_init.c
src/spgw/: Makefile.am  pgw_fd_path.c  pgw_fd_path.h  pgw_gx_handler.c  pgw_gx_handler.h  pgw_s5c_build.c  pgw_s5c_build.h  pgw_s5c_handler.c  pgw_s5c_handler.h  sgw_s11_handler.c  sgw_s11_handler.h  spgw_context.c  spgw_context.h  spgw_event.c  spgw_event.h  spgw_gtp_path.c  spgw_gtp_path.h  spgw_init.c  spgw_ipfw.c  spgw_ipfw.h  spgw_sm.c  spgw_sm.h
src/upf/: Makefile.am  upf_context.c  upf_context.h  upf_gtp_msg_handler.c  upf_gtp_msg_handler.h  upf_init.c  upf_libgtpnl.c  upf_libgtpnl.h  upf_nl.c  upf_nl.h
support/: README.md
support/config/: Makefile.am  hss.conf.in  mme.conf.in  pcrf.conf.in  pgw.conf.in  sgw.conf.in  vepc.conf.in
support/docker/host_root/etc/: rc.local
support/docker/host_root/root/app/vepc/conf/: 99-vepc.network  docker.rc.local  gen_conf.sh  get_serial  gtp_fw.ko  heart_beat_srv  ipsec_check.sh  keepalived.conf  mme_cfg_update  quicksetup.conf  sgi_check.sh  sys_check.sh  ue_check.sh  vepc_dynamic.conf  vepc_post_down.sh  vepc_post_up.sh  vepc_pre_down.sh  vepc_pre_up.sh  vnf_lost_reboot.sh
support/docker/package/: Dockerfile
support/freeDiameter/: Makefile.am  cacert.pem  hss.cert.pem  hss.conf.in  hss.key.pem  make_certs.sh  mme.cert.pem  mme.conf.in  mme.key.pem  pcrf.cert.pem  pcrf.conf.in  pcrf.key.pem  pgw.cert.pem  pgw.conf.in  pgw.key.pem
support/logrotate/: Makefile.am  vepc.in
support/network/: restart.sh
support/newsyslog/: Makefile.am  vepc.conf.in
support/radvd/: radvd.conf.example
support/root/app/vepc/conf/: keepalived.conf  prepare_host_os.sh  reboot_check.sh  vepc.conf  vepc_pre_down.sh  vepc_pre_up.sh
support/root/etc/: ipsec.conf  ipsec.secrets  rc.local
support/root/etc/cron.weekly/: vepc_log_clean.sh
support/root/etc/network/: interfaces
support/src/: get_serial.c
support/systemd/: Makefile.am  systemctl.sh  vepc-hssd.service.in  vepc-mmed.service.in  vepc-pcrfd.service.in  vepc-pgwd.service.in  vepc-sgwd.service.in
support/valgrind/: README.md
test/: Makefile.am  db_gen.js  heart_beat_srv.c  sample-volte.conf.in  sample.conf.in  testsuite.at
test/python/: enb.py  enb_5g.py  gtp_dl.py  gtp_ul.py  test.py  udp_server  udp_server.c  ue.py  ue_receiver.py  ue_sender.py
test/volte/: testapp.c
